log
Thu 28 Sep 2023 05:01:31 PM UTC: 
 tests:  0|4
total_score: 0/70
23d2f16
Thu 28 Sep 2023 05:05:15 PM UTC: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bd42c4f
Thu 28 Sep 2023 05:07:07 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|3
total_score: 10/70
48277c3
Thu 28 Sep 2023 05:11:35 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
aee6fef
Thu 28 Sep 2023 06:40:31 PM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:22: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   30 |   newElem.priority = p;
      |                      ^
      |                      pq
heap.c:30:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6ba8534
Thu 28 Sep 2023 06:41:22 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:22: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   30 |   newElem.priority = p;
      |                      ^
      |                      pq
heap.c:30:22: note: each undeclared identifier is reported only once for each function it appears in
heap.c:35:63: error: comparison between pointer and integer [-Werror]
   35 |   while (index > 0 && pq->heapArray[(index - 1) / 2].priority < pq > heapArray[index].priority) {
      |                                                               ^
heap.c:35:70: error: ‘heapArray’ undeclared (first use in this function)
   35 |   while (index > 0 && pq->heapArray[(index - 1) / 2].priority < pq > heapArray[index].priority) {
      |                                                                      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e70c6c3
Thu 28 Sep 2023 06:41:48 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:22: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   30 |   newElem.priority = p;
      |                      ^
      |                      pq
heap.c:30:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f262a67
